--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
     <button mat-icon-button aria-label="Login icon"><mat-icon>lock</mat-icon></button>
 </mat-toolbar>
 
-<mat-spinner></mat-spinner>
+<app-weather [location]='eventLocation'></app-weather>
