Introducing weather service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
     <button mat-icon-button aria-label="Login icon"><mat-icon>lock</mat-icon></button>
 </mat-toolbar>
 
-<app-weather location="thun"></app-weather>
+<app-weather weatherLocation="thun"></app-weather>
