--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
     <button mat-icon-button aria-label="Login icon"><mat-icon>lock</mat-icon></button>
     <button mat-icon-button aria-label="Menu icon"><mat-icon>menu</mat-icon></button>
 </mat-toolbar>
+<surf-home></surf-home>
 
-<!--<mat-spinner></mat-spinner>-->
