--- a/src/app/common/rider-card/rider-card.component.html
+++ b/src/app/common/rider-card/rider-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="rider__card">
+<mat-card routerLink="/rider/{{rider.id}}" class="rider__card">
     <mat-card-header class="rider__card__header">
         <div mat-card-avatar
              class="rider__card__header__image"
