--- a/src/app/views/home/event-card/event-card.component.html
+++ b/src/app/views/home/event-card/event-card.component.html
@@ -1,5 +1,5 @@
 <mat-card
-        routerLink="/events/{{surfEvent.id}}"
+        routerLink="/event/{{surfEvent.id}}"
         class="event__card">
     <mat-card-header class="event__card__header">
         <div mat-card-avatar [style.background-image]="'url(' + surfEvent.logo + ')'"
