--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -7,10 +7,12 @@
     </div>
     <div class="side">
         <h2>Some Awesome Riders</h2>
-        <surf-rider-card *ngFor="let rider of riders" [rider]="rider"></surf-rider-card>
+        <div class="rider__cards">
+            <surf-rider-card *ngFor="let rider of riders" [rider]="rider"></surf-rider-card>
+        </div>
     </div>
 </div>
 <div class="map">
     <h1>Some Awesome Locations</h1>
-    <img src="https://miro.medium.com/max/700/1*dUrRzzu4Mm4DMjH2jvmurQ.png" alt="">
+    <img style="max-width: 100%" src="https://miro.medium.com/max/700/1*dUrRzzu4Mm4DMjH2jvmurQ.png" alt="">
 </div>
