--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -3,15 +3,28 @@
   display: flex;
   flex-direction: row;
 
+  @media screen and (max-width: 1230px)  {
+    flex-direction: column;
+  }
+
   & .main {
     flex: 70%;
     padding: 1rem;
 
+    @media screen and (max-width: 1230px)  {
+      flex: 100%
+    }
+
+
     & .events {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-      row-gap: 1rem;
+      row-gap: 5rem;
       column-gap: 1rem;
+
+      @media screen and (max-width: 1230px)  {
+        grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
+      }
     }
   }
 
@@ -20,6 +33,24 @@
     padding: 1rem;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: 1230px)  {
+      flex: 100%
+    }
+    & .rider__cards {
+      @media screen and (max-width: 1230px)  {
+        display: grid;
+        row-gap: 1rem;
+        column-gap: 1rem;
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media screen and (max-width: 847px)  {
+        display: block;
+        grid-template-columns: none;
+      }
+
+    }
   }
 
 }
