--- a/src/app/common/rider-card/rider-card.component.scss
+++ b/src/app/common/rider-card/rider-card.component.scss
@@ -1,25 +1,21 @@
-
-
 .rider__card {
-  cursor: pointer;
-  margin-bottom: .5rem;
+    cursor: pointer;
+    margin-bottom: .5rem;
 
-  &:hover {
-    transform: scale(1.01);
-    box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1);
-  }
-
-  &:active {
-    transform: translateY(2px);
-  }
-
-  &__header {
-    &__image {
-      background-position: center;
-      background-size: contain;
-      transition: .5s all;
-
-
+    &:hover {
+        transform: scale(1.01);
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
     }
-  }
+
+    &:active {
+        transform: translateY(2px);
+    }
+
+    &__header {
+        &__image {
+            background-position: center;
+            background-size: contain;
+            transition: .5s all;
+        }
+    }
 }
