--- a/src/app/views/home/event-card/event-card.component.scss
+++ b/src/app/views/home/event-card/event-card.component.scss
@@ -1,34 +1,32 @@
 .event__card {
-  max-width: 400px;
-  transition: all .3s;
-  cursor: pointer;
+    max-width: 400px;
+    transition: all .3s;
+    cursor: pointer;
 
-  &:hover {
-    transform: scale(1.01);
-    box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1);
-  }
-
-  &:active {
-    transform: translateY(2px);
-  }
-
-  @media screen and (max-width: 847px)  {
-    max-width: 100%;
-  }
-
-  &__header {
-    position: relative;
-
-    &__date {
-      position: absolute;
-      top: 0;
-      right: 0;
+    &:hover {
+        transform: scale(1.01);
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
     }
-  }
 
-  &__headerimage {
-    background-size: cover;
-    /*background-image: url("https://riversurfstorage.blob.core.windows.net/eventimages/logo_event1.jpg"); */
+    &:active {
+        transform: translateY(2px);
+    }
 
-  }
+    @media screen and (max-width: 847px) {
+        max-width: 100%;
+    }
+
+    &__header {
+        position: relative;
+
+        &__date {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+    }
+
+    &__headerimage {
+        background-size: cover;
+    }
 }
