--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,7 +1,55 @@
-svg {
-    margin-right: 20px;
-}
+@import "../../../assets/scss/_variables";
 
-.spacer {
-    flex: 1 1 auto;
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+
+    &__logo {
+
+        h1 {
+            display: inline;
+        }
+
+        svg {
+            margin-right: 2rem;
+            vertical-align: middle;
+        }
+    }
+
+    &__search {
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+
+        input {
+            font-family: inherit;
+            font-size: 1.5rem;
+            background-color: $color-white;
+            border: none;
+            color: $color-text-3;
+            padding: 0.5rem 2rem;
+            border-radius: 1.5rem;
+            width: 40%;
+            transition: all 0.2s;
+            margin-right: -3.5rem;
+            text-align: center;
+
+            &:focus {
+                outline: none;
+                width: 45%;
+                background-color: #f0eeee;
+            }
+
+            &::placeholder {
+                font-weight: 100;
+                color: $color-text-4
+            }
+        }
+
+        @media screen and (max-width: 847px) {
+            display: none;
+        }
+    }
 }
