--- a/src/app/views/home/event-card/event-card.component.scss
+++ b/src/app/views/home/event-card/event-card.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/scss/_variables";
+
 .event__card {
     max-width: 400px;
     transition: all .3s;
@@ -23,6 +25,8 @@
             position: absolute;
             top: 0;
             right: 0;
+            font-size: 1.4rem;
+            color: $color-text-2;
         }
     }
 
