--- a/src/app/common/header/navigation/navigation.component.html
+++ b/src/app/common/header/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="navigation">
-    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle" #navigationToggler>
     <label for="navi-toggle" class="navigation__button">
         <mat-icon>menu</mat-icon>
     </label>
@@ -7,21 +7,21 @@
     <div class="navigation__background">&nbsp;</div>
     <nav class="navigation__nav">
         <ul class="navigation__list">
-            <li class="navigation__item"><a href="/" class="navigation__link">
+            <li class="navigation__item" routerLink="/" (click)="navigationToggler.checked = false"><div  class="navigation__link">
                 <mat-icon>event_note</mat-icon>
-                Events</a>
+                Events</div>
             </li>
-            <li class="navigation__item"><a href="/riders" class="navigation__link">
+            <li class="navigation__item" routerLink="/riders" (click)="navigationToggler.checked = false"><div class="navigation__link">
                 <mat-icon>person</mat-icon>
-                Riders</a>
+                Riders</div>
             </li>
-            <li class="navigation__item"><a href="/login" class="navigation__link">
+            <li class="navigation__item" routerLink="/login" (click)="navigationToggler.checked = false" ><div class="navigation__link">
                 <mat-icon>lock</mat-icon>
-                Login</a>
+                Login</div>
             </li>
-            <li class="navigation__item"><a href="/register" class="navigation__link">
+            <li class="navigation__item" routerLink="/register" (click)="navigationToggler.checked = false"><div class="navigation__link">
                 <mat-icon>edit</mat-icon>
-                Register</a>
+                Register</div>
             </li>
         </ul>
     </nav>
