--- a/src/app/common/header/navigation/navigation.component.scss
+++ b/src/app/common/header/navigation/navigation.component.scss
@@ -1,4 +1,5 @@
 @import "../../../../assets/scss/_variables";
+@import "../../../../assets/scss/_mixins";
 
 .navigation {
 
@@ -13,7 +14,7 @@
         position: relative;
         top: .4rem;
         right: 0;
-        z-index: 2000;
+        z-index: 10;
         box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
         text-align: center;
         cursor: pointer;
@@ -55,7 +56,7 @@
 
     &__link {
         display: inline-block;
-        font-size: 3.5rem;
+        @include title;
         font-weight: 300;
         padding: 1rem 2rem;
         color: $color-white;
