--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,9 +1,11 @@
+@import "../../../assets/scss/_responsive";
+
 .content {
     width: 100%;
     display: flex;
     flex-direction: row;
 
-    @media screen and (max-width: 1230px) {
+    @include respond(medium) {
         flex-direction: column;
     }
 
@@ -11,7 +13,7 @@
         flex: 70%;
         padding: 2rem;
 
-        @media screen and (max-width: 1230px) {
+        @include respond(medium) {
             flex: 100%
         }
 
@@ -22,7 +24,7 @@
             row-gap: 5rem;
             column-gap: 1rem;
 
-            @media screen and (max-width: 847px) {
+            @include respond(small) {
                 grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
             }
         }
@@ -34,19 +36,19 @@
         display: flex;
         flex-direction: column;
 
-        @media screen and (max-width: 1230px) {
+        @include respond(medium) {
             flex: 100%
         }
 
         & .rider__cards {
-            @media screen and (max-width: 1230px) {
+            @include respond(medium) {
                 display: grid;
                 row-gap: 1rem;
                 column-gap: 1rem;
                 grid-template-columns: repeat(2, 1fr);
             }
 
-            @media screen and (max-width: 847px) {
+            @include respond(small) {
                 display: block;
                 grid-template-columns: none;
             }
