--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,6 @@
 $color-primary: #3f51b5;
+$color-warn: #FFC107;
+$color-error: #F44336;
 
 $color-text-1: #1a1a1a;
 $color-text-2: #808080;
@@ -15,3 +17,5 @@ $color-grey-light-2: #eee;
 $color-grey-dark-1: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
+
+
