--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 $color-primary: #3f51b5;
 $color-warn: #FFC107;
 $color-error: #F44336;
+$color-water: #00BFFF;
 
 $color-text-1: #1a1a1a;
 $color-text-2: #808080;
