feat(23): add network-status service

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -14,5 +14,6 @@
                autocomplete="off"
         >
     </div>
+    <mat-icon *ngIf="(networkStatus$ | async) === 'OFFLINE'">portable_wifi_off</mat-icon>
     <surf-navigation></surf-navigation>
 </mat-toolbar>
