--- a/src/app/views/riders/rider-profile/rider-profile.component.html
+++ b/src/app/views/riders/rider-profile/rider-profile.component.html
@@ -1,4 +1,11 @@
-<p>rider-profile works!</p>
-<p>We are on the profile of the rider {{riderId}}</p>
+<div class="container">
+    <div class="overview">
+        <p>rider-profile works!</p>
+    </div>
+    <div class="details">
+        <p>We are on the profile of the rider {{riderId}}</p>
+    </div>
+</div>
+
 
 
