--- a/src/app/views/riders/rider-profile/rider-profile.component.html
+++ b/src/app/views/riders/rider-profile/rider-profile.component.html
@@ -1,11 +1,8 @@
 <div class="container">
     <div class="overview">
-        <p>rider-profile works!</p>
+        <surf-rider-overview></surf-rider-overview>
     </div>
     <div class="details">
-        <p>We are on the profile of the rider {{riderId}}</p>
+        <surf-rider-details></surf-rider-details>
     </div>
 </div>
-
-
-
