Fixed alignment of Icons & Buttons in Forms, disable scrolling when navigation is displayed

--- a/src/app/common/header/navigation/navigation.component.html
+++ b/src/app/common/header/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="navigation">
-    <input type="checkbox" class="navigation__checkbox" id="navi-toggle" #navigationToggler>
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle" #navigationToggler [checked]="isChecked" (change)="toggleScrolling()">
     <label for="navi-toggle" class="navigation__button">
         <mat-icon>menu</mat-icon>
     </label>
