--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -11,6 +11,8 @@
     &__logo {
         flex: 1 1;
         cursor: pointer;
+        outline: none;
+
         h1 {
             display: inline;
         }
