--- a/src/app/common/header/navigation/navigation.component.scss
+++ b/src/app/common/header/navigation/navigation.component.scss
@@ -113,6 +113,8 @@
             transform: translateX(1rem);
 
             @include respond(small) {
+                background-position: inherit;
+                color: inherit;
                 transform: none;
             }
         }
