--- a/src/app/common/header/navigation/navigation.component.scss
+++ b/src/app/common/header/navigation/navigation.component.scss
@@ -79,6 +79,10 @@
         @include respond(small) {
             margin: 0;
             padding: 1rem;
+
+            &:hover {
+                transform: none;
+            }
         }
     }
 
@@ -111,11 +115,12 @@
             background-position: 100%;
             color: $color-primary;
             transform: translateX(1rem);
+        }
 
-            @include respond(small) {
-                background-position: inherit;
-                color: inherit;
+        @include respond(small) {
+            &:hover {
                 transform: none;
+                background-position: 0 0;
             }
         }
     }
