Timeline with stepper

--- a/src/app/views/riders/rider-profile/rider-profile.component.html
+++ b/src/app/views/riders/rider-profile/rider-profile.component.html
@@ -3,6 +3,6 @@
         <surf-rider-overview></surf-rider-overview>
     </div>
     <div class="details">
-        <surf-rider-details></surf-rider-details>
+        <surf-rider-timeline></surf-rider-timeline>
     </div>
 </div>
