--- a/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
+++ b/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
@@ -1,8 +1,18 @@
 <mat-tab-group>
     <mat-tab label="Ongoing">
         <h1>RiverSurfJam 2021</h1>
+        <h2>Thun</h2>
         <p>Ride the waves!</p>
+        <surf-timeline></surf-timeline>
     </mat-tab>
-    <mat-tab label="2020"> Content 2 </mat-tab>
-    <mat-tab label="2019"> Content 3 </mat-tab>
+    <mat-tab label="2020">
+        <h1>RiverSurfJam 2020</h1>
+        <h2>Thun</h2>
+        <p>Attended</p>
+    </mat-tab>
+    <mat-tab label="2019">
+        <h1>RiverSurfJam 2019</h1>
+        <h2>Thun</h2>
+        <p>Attended</p>
+    </mat-tab>
 </mat-tab-group>
