adding statistics bar

--- a/src/app/views/riders/riders.component.html
+++ b/src/app/views/riders/riders.component.html
@@ -1,1 +1,25 @@
-<p>riders works!</p>
+<div class="">
+    <mat-button-toggle-group class="statistic-bar" name="fontStyle" aria-label="Font Style">
+    <mat-button-toggle class="statistic-bar__item statistic-bar__item--male">
+            <mat-icon class="statistic-bar__item__icon">male</mat-icon>
+            <div class="statistic-bar__item__info">
+                <h2>40 Men</h2>
+            </div>
+        </mat-button-toggle>
+        <mat-button-toggle class="statistic-bar__item statistic-bar__item--female">
+            <mat-icon class="statistic-bar__item__icon">female</mat-icon>
+            <div class="statistic-bar__item__info">
+                <h2>40 female</h2>
+            </div>
+        </mat-button-toggle>
+        <mat-button-toggle class="statistic-bar__item statistic-bar__item--kids">
+            <mat-icon class="statistic-bar__item__icon">cruelty_free</mat-icon>
+            <div class="statistic-bar__item__info">
+                <h2>40 kids </h2>
+            </div>
+        </mat-button-toggle>
+    </mat-button-toggle-group>
+</div>
+
+
+
