--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -19,4 +19,7 @@ $color-grey-dark-1: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 
+$color-male: #01bcd4;
+$color-female: #cf8cbe;
+$color-kids: #9cda53;
 
