--- a/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.html
+++ b/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.html
@@ -10,10 +10,14 @@
     <mat-divider></mat-divider>
     <mat-list-item>
         <div class="socialBar">
-            <mat-icon>notifications_none</mat-icon>Facebook
-            <mat-icon>notifications_none</mat-icon>Instagram
-            <mat-icon>notifications_none</mat-icon>Twitter
-            <mat-icon>notifications_none</mat-icon>Notify me
+            <mat-icon>notifications_none</mat-icon>
+            Facebook
+            <mat-icon>notifications_none</mat-icon>
+            Instagram
+            <mat-icon>notifications_none</mat-icon>
+            Twitter
+            <mat-icon>notifications_none</mat-icon>
+            Notify me
         </div>
     </mat-list-item>
     <mat-divider></mat-divider>
