--- a/src/app/views/riders/rider-profile/rider-profile.component.html
+++ b/src/app/views/riders/rider-profile/rider-profile.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="overview">
-        <surf-rider-overview></surf-rider-overview>
+        <surf-rider-overview *ngIf="rider" [rider]="rider"></surf-rider-overview>
     </div>
     <div class="details">
-        <surf-rider-timeline></surf-rider-timeline>
+        <surf-rider-timeline *ngIf="rider" [riderId]="rider.id"></surf-rider-timeline>
     </div>
 </div>
