--- a/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
+++ b/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
@@ -3,16 +3,16 @@
         <h1>RiverSurfJam 2021</h1>
         <h2>Thun</h2>
         <p>Ride the waves!</p>
-        <surf-timeline [timeline]="currentTimeline"></surf-timeline>
+        <surf-timeline *ngIf="currentTimeline" [timeline]="currentTimeline.timeline"></surf-timeline>
     </mat-tab>
-    <mat-tab label="2020">
-        <h1>RiverSurfJam 2020</h1>
-        <h2>Thun</h2>
-        <surf-timeline [timeline]="oldTimeLine"></surf-timeline>
-    </mat-tab>
-    <mat-tab label="2019">
-        <h1>RiverSurfJam 2019</h1>
-        <h2>Thun</h2>
-        <surf-timeline [timeline]="oldTimeLine"></surf-timeline>
-    </mat-tab>
+<!--    <mat-tab label="2020">-->
+<!--        <h1>RiverSurfJam 2020</h1>-->
+<!--        <h2>Thun</h2>-->
+<!--        <surf-timeline [timeline]="historyTimeline[0]?.timeline"></surf-timeline>-->
+<!--    </mat-tab>-->
+<!--    <mat-tab label="2019">-->
+<!--        <h1>RiverSurfJam 2019</h1>-->
+<!--        <h2>Thun</h2>-->
+<!--        <surf-timeline [timeline]="historyTimeline[1]?.timeline"></surf-timeline>-->
+<!--    </mat-tab>-->
 </mat-tab-group>
