--- a/src/app/views/riders/riders.component.html
+++ b/src/app/views/riders/riders.component.html
@@ -22,4 +22,65 @@
 </div>
 
 
+<div class="content">
+    <main class="main">
+        <mat-form-field appearance="standard">
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Filter Rider" #input>
+        </mat-form-field>
 
+        <table class="table" mat-table [dataSource]="dataSource" matSort>
+
+            <ng-container matColumnDef="avatar">
+                <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+                <td mat-cell *matCellDef="let rider;">
+                    <img src="{{ rider.profilePicture }}" class="table__data__image" alt="{{ rider.lastName }} {{ rider.firstName }}">
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let rider">{{ rider.lastName }} {{ rider.firstName }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="nickName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nickname</th>
+                <td mat-cell *matCellDef="let rider">{{ rider.nickName }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="division">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Division</th>
+                <td mat-cell *matCellDef="let rider">{{ rider.division | titlecase }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+                <td mat-cell *matCellDef="let rider">
+                    <button mat-icon-button aria-label="Follow this rider">
+                        <mat-icon>favorite_border</mat-icon>
+                    </button>
+                    <button mat-icon-button aria-label="View rider profile">
+                        <mat-icon>visibility</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="5">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[10, 20, 50]"
+                       showFirstLastButtons
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </main>
+
+    <aside class="aside">
+        Aside
+    </aside>
+</div>
