--- a/src/app/views/riders/riders.component.scss
+++ b/src/app/views/riders/riders.component.scss
@@ -1,5 +1,6 @@
-@import "../../../assets/scss/_variables";
+@import "../../../assets/scss/_mixins";
 @import "../../../assets/scss/_responsive";
+@import "../../../assets/scss/_variables";
 
 .statistic-bar {
     display: flex;
@@ -13,11 +14,11 @@
         display: flex;
         flex-direction: column;
         border-radius: 4px;
-        border: solid 1px rgba(0,0,0,.12);
+        border: solid 1px rgba(0, 0, 0, .12);
         cursor: pointer;
         transition: all 0.2s;
 
-        &:hover{
+        &:hover {
             transform: scale(1.01);
             box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
         }
@@ -70,4 +71,80 @@
 
 .mat-button-toggle-standalone.mat-button-toggle-appearance-standard, .mat-button-toggle-group-appearance-standard {
     border: none;
+}
+
+
+.content {
+    display: flex;
+    padding: 2rem 0;
+    @include bottom-space;
+
+    @include respond(medium) {
+        flex-direction: column;
+    }
+
+    & > * {
+        padding: 1rem;
+    }
+
+    & .main {
+        flex: 70%;
+
+        @include respond(medium) {
+            flex: 100%;
+        }
+
+        .mat-form-field {
+            width: 100%;
+        }
+
+        .table {
+            width: 100%;
+
+            & tr:hover {
+                background-color: #eee;
+            }
+
+            & .mat-column-avatar {
+                width: 15%;
+            }
+
+            & .mat-column-name {
+                width: 35%;
+            }
+
+            & .mat-column-nickname {
+                width: 20%;
+            }
+
+            & .mat-column-division {
+                width: 15%;
+            }
+
+            & .mat-column-action {
+                width: 15%;
+                white-space: nowrap;
+                text-align: right;
+            }
+
+            &__data {
+
+                &__image {
+                    width: 4rem;
+                    height: 4rem;
+                    border-radius: 50%;
+                    padding: 0.5rem;
+                    transition: .5s all;
+                }
+            }
+        }
+    }
+
+    & .aside {
+        flex: 30%;
+
+        @include respond(medium) {
+            flex: 100%;
+        }
+    }
 }
