--- a/src/app/views/riders/riders.component.html
+++ b/src/app/views/riders/riders.component.html
@@ -1,18 +1,18 @@
 <div class="">
-    <mat-button-toggle-group class="statistic-bar" name="fontStyle" aria-label="Font Style">
-    <mat-button-toggle class="statistic-bar__item statistic-bar__item--male">
+    <mat-button-toggle-group class="statistic-bar" [(ngModel)]="division" aria-label="Division" (change)="toggleDivision()">
+        <mat-button-toggle value="male" class="statistic-bar__item statistic-bar__item--male">
             <mat-icon class="statistic-bar__item__icon">male</mat-icon>
             <div class="statistic-bar__item__info">
                 <h2>40 Men</h2>
             </div>
         </mat-button-toggle>
-        <mat-button-toggle class="statistic-bar__item statistic-bar__item--female">
+        <mat-button-toggle value="female" class="statistic-bar__item statistic-bar__item--female">
             <mat-icon class="statistic-bar__item__icon">female</mat-icon>
             <div class="statistic-bar__item__info">
                 <h2>40 female</h2>
             </div>
         </mat-button-toggle>
-        <mat-button-toggle class="statistic-bar__item statistic-bar__item--kids">
+        <mat-button-toggle value="kid" class="statistic-bar__item statistic-bar__item--kids">
             <mat-icon class="statistic-bar__item__icon">cruelty_free</mat-icon>
             <div class="statistic-bar__item__info">
                 <h2>40 kids </h2>
@@ -25,8 +25,8 @@
 <div class="content">
     <main class="main">
         <mat-form-field appearance="standard">
-            <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Filter Rider" #input>
+            <mat-label>Search Riders</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search Riders" #input>
         </mat-form-field>
 
         <table class="table" mat-table [dataSource]="dataSource" matSort>
@@ -34,7 +34,8 @@
             <ng-container matColumnDef="avatar">
                 <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
                 <td mat-cell *matCellDef="let rider;">
-                    <img src="{{ rider.profilePicture }}" class="table__data__image" alt="{{ rider.lastName }} {{ rider.firstName }}">
+                    <img src="{{ rider.profilePicture }}" class="table__data__image"
+                         alt="{{ rider.lastName }} {{ rider.firstName }}">
                 </td>
             </ng-container>
 
