--- a/src/app/views/riders/riders.component.scss
+++ b/src/app/views/riders/riders.component.scss
@@ -147,9 +147,27 @@
     & .aside {
         flex: 30%;
 
+        &__favorite-riders {
+
+            @include respond(medium) {
+                display: grid;
+                row-gap: 1rem;
+                column-gap: 1rem;
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+
+            @include respond(small) {
+                display: block;
+                grid-template-columns: none;
+            }
+
+        }
         @include respond(medium) {
             flex: 100%;
+
         }
+
     }
 }
 
